package provider

import (
	"skyclust/internal/domain"
	"skyclust/internal/shared/handlers"
	"skyclust/internal/shared/responses"

	"github.com/gin-gonic/gin"
)

// Handler handles provider-related HTTP requests
type Handler struct {
	*handlers.BaseHandler
	providerManager interface{} // gRPC Provider Manager
	auditLogRepo    domain.AuditLogRepository
}

// NewHandler creates a new provider handler
func NewHandler(providerManager interface{}, auditLogRepo domain.AuditLogRepository) *Handler {
	return &Handler{
		BaseHandler:     handlers.NewBaseHandler("provider"),
		providerManager: providerManager,
		auditLogRepo:    auditLogRepo,
	}
}

// GetProviders returns the list of available providers
func (h *Handler) GetProviders(c *gin.Context) {
	// TODO: Implement gRPC Provider Manager integration
	responses.OK(c, gin.H{
		"type":      "gRPC",
		"providers": []string{},
		"note":      "gRPC Provider Manager integration pending",
	}, "Provider list")
}

// GetProvider returns information about a specific provider
func (h *Handler) GetProvider(c *gin.Context) {
	providerName := c.Param("name")
	// TODO: Implement gRPC Provider Manager integration
	responses.OK(c, gin.H{
		"name": providerName,
		"type": "gRPC",
		"note": "gRPC Provider Manager integration pending",
	}, "Provider information")
}

// GetInstances returns instances for a specific provider
func (h *Handler) GetInstances(c *gin.Context) {
	providerName := c.Param("name")
	responses.OK(c, gin.H{
		"provider":  providerName,
		"instances": []interface{}{},
		"note":      "gRPC Provider Manager integration pending",
	}, "Instance list")
}

// GetInstance returns information about a specific instance
func (h *Handler) GetInstance(c *gin.Context) {
	providerName := c.Param("name")
	instanceID := c.Param("id")
	responses.OK(c, gin.H{
		"provider": providerName,
		"id":       instanceID,
		"note":     "gRPC Provider Manager integration pending",
	}, "Instance information")
}

// CreateInstance creates a new instance
func (h *Handler) CreateInstance(c *gin.Context) {
	providerName := c.Param("name")
	responses.OK(c, gin.H{
		"provider": providerName,
		"note":     "gRPC Provider Manager integration pending",
	}, "Instance creation")
}

// DeleteInstance deletes an instance
func (h *Handler) DeleteInstance(c *gin.Context) {
	providerName := c.Param("name")
	instanceID := c.Param("id")
	responses.OK(c, gin.H{
		"provider": providerName,
		"id":       instanceID,
		"note":     "gRPC Provider Manager integration pending",
	}, "Instance deletion")
}

// GetRegions returns available regions for a provider
func (h *Handler) GetRegions(c *gin.Context) {
	providerName := c.Param("name")
	responses.OK(c, gin.H{
		"provider": providerName,
		"regions":  []interface{}{},
		"note":     "gRPC Provider Manager integration pending",
	}, "Region list")
}

// GetCostEstimates returns cost estimates
func (h *Handler) GetCostEstimates(c *gin.Context) {
	providerName := c.Param("name")
	responses.OK(c, gin.H{
		"provider":  providerName,
		"estimates": []interface{}{},
		"note":      "gRPC Provider Manager integration pending",
	}, "Cost estimates")
}

// CreateCostEstimate creates a cost estimate
func (h *Handler) CreateCostEstimate(c *gin.Context) {
	providerName := c.Param("name")
	responses.OK(c, gin.H{
		"provider": providerName,
		"note":     "gRPC Provider Manager integration pending",
	}, "Cost estimate creation")
}
